<resources>
    <string name="app_name">MallXpress</string>
    <string name="internet_unavailable">Internet is not available, Check your internet connection and try again</string>
    <string name="_ok">OK</string>
    <string name="_cancel">CANCEL</string>
    <string name="_submit">SUBMIT</string>
    <string name="action_bell">Bell</string>
    <string name="action_cart">Cart</string>
    <string name="search">Search</string>
    <string name="login_action_title">Login</string>
    <string name="signup_action_title">SignUp</string>
    <string name="my_account">My Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="addrbook_action_title">Address Book</string>
    <string name="myproreview_action_title">My Product Reviews</string>
    <string name="mywishlist_action_title">My Wishlist</string>
    <string name="myorder_action_title">My Orders</string>
    <string name="newslettersubs_action_title">Newsletter Subscription</string>
    <string name="mydownloads_action_title">My Downloadable Products</string>
    <string name="sell">Sell</string>
    <string name="seller_dashboard">Seller Dashboard</string>
    <string name="seller_order">Seller Order</string>
    <string name="logout_title">Log out</string>
    <string name="login_title">Log In</string>
    <string name="demo_password" translatable="false">demo</string>
    <string name="demo_username" translatable="false">demo@mallxpress.com</string>
    <string name="is_require_text">is required!</string>
    <string name="alert_password_length">must have at least 4 characters</string>
    <string name="please_wait">Please wait</string>
    <string name="processing_request_response">while we contact the server</string>
    <string name="Error">Error</string>
    <string name="Search">Search</string>
    <string name="Success">Success</string>
    <string name="forgot_your_password_">FORGOT YOUR PASSWORD?</string>
    <string name="forgotPassDialogDesc">Please enter your email address below. You will receive a link to reset your password.</string>
    <string name="loginFormEmailTitle">Email Address</string>
    <string name="enter_valid_email">Please Enter a Valid Email!</string>
    <string name="message">Message</string>
    <string name="loading">Loading...</string>
    <string name="account_action_title">Account</string>
    <string name="_edit_your_account_information">Edit your account information</string>
    <string name="change_your_password">Change your password</string>
    <string name="modify_your_address_book_entries">Modify your address book entries</string>
    <string name="modify_your_wish_list">Modify your wish list</string>
    <string name="my_orders">My Orders</string>
    <string name="view_your_order_history">View your order history</string>
    <string name="downloads">Downloads</string>
    <string name="your_reward_points">Your Reward Points</string>
    <string name="view_your_return_requests">View your return requests</string>
    <string name="your_transactions">Your Transactions</string>
    <string name="newslettersheading">Newsletters</string>
    <string name="subscribe_unsubscribe_to_newsletter">Subscribe / unsubscribe to newsletter</string>
    <string name="acc_account_cover_image">Account Cover Image</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="acc_show_or_hide_password_button">Show or hide password button</string>
    <string name="press_back_to_exit">Press Back again to Exit</string>
    <string name="home">Home</string>
    <string name="dashboard_action_title">My Dashboard</string>
    <string name="accountinfo_action_title">Account Information</string>
    <string name="login_or_register">Login Or Register</string>
    <string name="all">"All "</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="out_of_stock">OUT OF STOCK</string>
    <string name="wishlist_msg">You must to Login or create an account to save this product to your wishlist</string>
    <string name="featured_product_label">FEATURED PRODUCT</string>
    <string name="latest_product_label">LATEST PRODUCTS</string>
    <string name="browse_by_brands">Explore Our Brands</string>
    <string name="newsletter_label">NEWSLETTER</string>
    <string name="subscribe_edittext_hint">Email Address</string>
    <string name="subscribe_button_label">SUBSCRIBE</string>
    <string name="_retry">RETRY</string>
    <string name="view_all_">View All</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_subcategory">Subcategory</string>
    <string name="category">CATEGORY</string>
    <string name="view_all_product">View All</string>
    <string name="of_toast_for_no_of_item">of</string>
    <string name="filter">Shop By</string>
    <string name="sort">Sort By</string>
    <string name="switcher" translatable="false">View Switcher</string>
    <string name="search_hint">Search</string>
    <string name="total">Total</string>
    <string name="items_found">item(s) found.</string>
    <string name="sale">Sale</string>
    <string name="filter_options_are_not_available">Filter options are not available</string>
    <string name="image">Image</string>
    <string name="you_are_not_logged_in_please_login_to_continue">You are not logged in. Please login to continue</string>
    <string name="title_activity_sorter">Sorter</string>
    <string name="facebook_app_id" translatable="false">1389270404421194</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb221489301202022</string>
    <string name="title_activity_view_product">ViewProduct</string>
</resources>