<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@id/main_content"
    android:background="@color/background_color"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@id/appbar"
        android:fitsSystemWindows="true"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/subcategory_banner_appbaselayout_height">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@id/collapsing_toolbar"
            android:fitsSystemWindows="true"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:expandedTitleMarginStart="18.0dip"
            app:expandedTitleMarginEnd="64.0dip"
            app:contentScrim="?colorPrimary">

            <ImageView
                android:id="@id/banner_dashboard"
                android:background="@drawable/banner_dashboard"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                app:layout_scrollFlags="enterAlways|scroll|snap"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/acc_account_cover_image" />

            <include
                android:id="@id/toolbar"
                layout="@layout/toolbar" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="2.0dip"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:id="@id/dashboardContainer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:textSize="@dimen/heading_size_large"
                android:textStyle="bold"
                android:textColor="#ffffffff"
                android:id="@id/heading"
                android:background="@color/primary_color"
                android:padding="6.0dip"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_action_title" />

            <TextView
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                android:textColor="@color/secondary_text_color"
                android:padding="5.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:text="@string/my_account" />

            <android.support.v7.widget.CardView android:padding="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                card_view:cardUseCompatPadding="true"
                xmlns:card_view="http://schemas.android.com/apk/res-auto">

                <LinearLayout
                    android:orientation="vertical"
                    android:background="#ffffffff"
                    android:paddingLeft="10.0dip"
                    android:paddingRight="10.0dip"
                    android:paddingBottom="10.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5.0dip"
                        android:text="@string/_edit_your_account_information"
                        android:onClick="redirectToAccountInfo" />

                    <View
                        android:background="#ffc1c1c1"
                        android:padding="4.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="1.0dip"
                        android:layout_margin="5.0dip" />

                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_your_password"
                        android:onClick="changePassword" />

                    <View
                        android:background="#ffc1c1c1"
                        android:padding="4.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="1.0dip"
                        android:layout_margin="5.0dip" />

                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modify_your_address_book_entries"
                        android:onClick="manageAddress" />

                    <View
                        android:background="#ffc1c1c1"
                        android:padding="4.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="1.0dip"
                        android:layout_margin="5.0dip" />

                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modify_your_wish_list"
                        android:onClick="viewWishlist" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                android:textColor="@color/secondary_text_color"
                android:id="@id/recentordersheading"
                android:padding="5.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_orders" />

            <android.support.v7.widget.CardView android:padding="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                card_view:cardUseCompatPadding="true"
                xmlns:card_view="http://schemas.android.com/apk/res-auto">

                <LinearLayout
                    android:orientation="vertical"
                    android:background="#ffffffff"
                    android:paddingLeft="10.0dip"
                    android:paddingTop="10.0dip"
                    android:paddingRight="10.0dip"
                    android:paddingBottom="10.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_your_order_history"
                        android:onClick="viewAllOrders" />

                    <View
                        android:background="#ffc1c1c1"
                        android:padding="4.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="1.0dip"
                        android:layout_margin="5.0dip" />

                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/downloads"
                        android:onClick="viewDownloadableProduct" />

                    <View
                        android:background="#ffc1c1c1"
                        android:padding="4.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="1.0dip"
                        android:layout_margin="5.0dip" />

                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_reward_points"
                        android:onClick="viewPoints" />

                    <View
                        android:background="#ffc1c1c1"
                        android:padding="4.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="1.0dip"
                        android:layout_margin="5.0dip" />

                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_your_return_requests"
                        android:onClick="viewReturnData" />

                    <View
                        android:background="#ffc1c1c1"
                        android:padding="4.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="1.0dip"
                        android:layout_margin="5.0dip" />

                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_transactions"
                        android:onClick="viewTransactions" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                android:textColor="@color/secondary_text_color"
                android:id="@id/newslettersheading"
                android:padding="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/newslettersheading" />

            <android.support.v7.widget.CardView android:padding="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                card_view:cardUseCompatPadding="true"
                xmlns:card_view="http://schemas.android.com/apk/res-auto">

                <LinearLayout
                    android:orientation="vertical"
                    android:background="#ffffffff"
                    android:padding="10.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:id="@id/newslettersinfo"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subscribe_unsubscribe_to_newsletter"
                        android:onClick="viewNewsletter" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <ProgressBar
                android:layout_gravity="center"
                android:id="@id/dashboardprogress"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                style="?android:attr/progressBarStyle" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>