<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="10.0dip"
    android:paddingTop="5.0dip"
    android:paddingRight="10.0dip"
    android:paddingBottom="5.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:text="@string/forgot_your_password_"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:id="@id/relativeLayout1"
        android:paddingLeft="5.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:layout_below="@id/textView1"
        android:layout_alignLeft="@id/textView1">

        <TextView
            android:id="@id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassDialogDesc" />

        <TextView
            android:textSize="16.0sp"
            android:id="@id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:text="@string/loginFormEmailTitle"
            android:layout_below="@id/textView5" />

        <EditText
            android:id="@id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@id/email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:inputType="textEmailAddress">

            <requestFocus />
        </EditText>
    </RelativeLayout>
</RelativeLayout>